add plant screen

--- a/App/AndroidStudioProjects/MyApplication/app/src/main/AndroidManifest.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.MainActivity" />
-        <activity android:name=".activities.PlantActivity"></activity>
+        <activity android:name=".activities.PlantActivity" />
+        <activity android:name=".activities.AddPlantActivity"></activity>
     </application>
 
 </manifest>
