--- a/App/AndroidStudioProjects/MyApplication/app/src/main/AndroidManifest.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.joelruhe.myapplication">
-
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>"
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,7 +19,8 @@
         <activity android:name=".activities.MainActivity" />
         <activity android:name=".activities.PlantActivity" />
         <activity android:name=".activities.AddPlantActivity" />
-        <activity android:name=".activities.AddPlantMenuActivity"></activity>
+        <activity android:name=".activities.AddPlantMenuActivity" />
+        <activity android:name=".activities.DatabaseActivity"></activity>
     </application>
 
 </manifest>
