--- a/App/AndroidStudioProjects/MyApplication/app/build.gradle
+++ b/App/AndroidStudioProjects/MyApplication/app/build.gradle
@@ -35,6 +35,6 @@ dependencies {
     implementation 'com.android.support:gridlayout-v7:27.1.1'
     implementation 'com.android.volley:volley:1.1.0'
 
-
-
+    //Add library
+    implementation 'com.ms-square:expandableTextView:0.1.4'
 }
