Trying to add navigation sidebar

--- a/App/AndroidStudioProjects/MyApplication/app/build.gradle
+++ b/App/AndroidStudioProjects/MyApplication/app/build.gradle
@@ -34,11 +34,10 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.android.support:gridlayout-v7:27.1.1'
     implementation 'com.android.volley:volley:1.1.0'
-
-<<<<<<< HEAD
     //Add library
     implementation 'com.ms-square:expandableTextView:0.1.4'
-=======
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
 
->>>>>>> d1ac11c167f66e9f459e64379d089ee41317e353
+
 }
