--- a/App/AndroidStudioProjects/MyApplication/app/src/main/AndroidManifest.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/AndroidManifest.xml
@@ -11,24 +11,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/CustomToolbarStyle">
-        <activity android:name=".activities.SplashScreenActivity">
+        <activity android:name=".activities.FirebaseActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.MainActivity"/>
+        <activity android:name=".activities.MainActivity" />
         <activity android:name=".activities.PlantActivity" />
         <activity android:name=".activities.AddPlantActivity" />
         <activity android:name=".activities.AddPlantMenuActivity" />
         <activity android:name=".activities.DatabaseActivity" />
         <activity android:name=".activities.LoginActivity" />
         <activity android:name=".activities.RegisterActivity" />
-        <activity android:name=".activities.SidebarActivity.NavigationMenu"/>
-        <activity android:name=".activities.EnterPinActivity">
+        <activity android:name=".activities.SidebarActivity.NavigationMenu" />
+        <activity android:name=".activities.EnterPinActivity"></activity>
 
-        </activity>
     </application>
 
 </manifest>
