--- a/App/AndroidStudioProjects/MyApplication/app/src/main/AndroidManifest.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/CustomToolbarStyle">
-        <activity android:name=".activities.MainActivity">
+        <activity android:name=".activities.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,6 +19,7 @@
             </intent-filter>
         </activity>
        <!-- <activity android:name=".activities.MainActivity" />-->
+        <activity android:name=".activities.MainActivity"/>
         <activity android:name=".activities.PlantActivity" />
         <activity android:name=".activities.AddPlantActivity" />
         <activity android:name=".activities.AddPlantMenuActivity" />
