Login, registration, forgot password function page added with firebase

--- a/App/AndroidStudioProjects/MyApplication/app/src/main/AndroidManifest.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/AndroidManifest.xml
@@ -18,8 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-       <!-- <activity android:name=".activities.MainActivity" />-->
-        <activity android:name=".activities.MainActivity"/>
+        <!-- <activity android:name=".activities.MainActivity" /> -->
+        <activity android:name=".activities.MainActivity" />
         <activity android:name=".activities.PlantActivity" />
         <activity android:name=".activities.AddPlantActivity" />
         <activity android:name=".activities.AddPlantMenuActivity" />
@@ -27,8 +27,11 @@
         <activity android:name=".activities.LoginActivity" />
         <activity android:name=".activities.RegisterActivity" />
         <activity android:name=".activities.SidebarActivity.NavigationMenu" />
-        <activity android:name=".activities.EnterPinActivity"></activity>
-
+        <activity android:name=".activities.EnterPinActivity" />
+        <activity android:name=".activities.FireBaseLoginActivity" />
+        <activity android:name=".activities.FireBaseRegisterActivity" />
+        <activity android:name=".activities.FireBaseResetPasswordActivity" />
+        <activity android:name=".activities.MyNetworkActivity"></activity>
     </application>
 
 </manifest>
