Changed the app theme. Only the main activity has an action bar. Now we can add custom toolbars to the other activities.

--- a/App/AndroidStudioProjects/MyApplication/app/src/main/AndroidManifest.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
             </intent-filter>
         </activity>
         <!-- <activity android:name=".activities.MainActivity" /> -->
-        <activity android:name=".activities.MainActivity" />
+        <activity android:name=".activities.MainActivity"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"/>
         <activity android:name=".activities.PlantActivity" />
         <activity android:name=".activities.AddPlantActivity" />
         <activity android:name=".activities.AddPlantMenuActivity" />
@@ -28,7 +29,7 @@
         <activity android:name=".activities.RegisterActivity" />
         <activity android:name=".activities.SidebarActivity.NavigationMenu" />
         <activity android:name=".activities.EnterPinActivity" />
-        <activity android:name=".activities.FireBaseLoginActivity" />
+        <activity android:name=".activities.FireBaseLoginActivity"/>
         <activity android:name=".activities.FireBaseRegisterActivity" />
         <activity android:name=".activities.FireBaseResetPasswordActivity" />
         <activity android:name=".activities.MyNetworkActivity"></activity>
