--- a/App/AndroidStudioProjects/MyApplication/app/build.gradle
+++ b/App/AndroidStudioProjects/MyApplication/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.google.firebase:firebase-core:16.0.4'
     implementation 'com.google.firebase:firebase-database:16.0.3'
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
 }
 
 apply plugin: 'com.google.gms.google-services'
